service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chops
  labels:
    app: chops
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      name: http
  selector:
    app: chops
